--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <h1>
-        ISQA_4 - Issue Tracker
+        Issue Tracker API
       </h1>
     </header>
     <div id='userstories' style='margin-left: 5%; margin-top: 2%'>
