--- a/views/index.html
+++ b/views/index.html
@@ -28,23 +28,23 @@
             <form id="testForm">
               <div class="form-group row">
                 <label class="col-sm-4" for="issue_title"><b>Issue Title:</b></label>  
-                <input type="text" name="issue_title" class="col-sm-8" placeholder="*Title" required=''>
+                <input type="text" name="issue_title" class="col-sm-8" placeholder="Title (required)" required=''>
               </div>
               <div class="form-group row">
                 <label class="col-sm-4" for="issue_text"><b>Issue Text:</b></label>  
-                <textarea type="text" name="issue_text" class="col-sm-8" placeholder="*Text" required=''></textarea>
+                <textarea type="text" name="issue_text" class="col-sm-8" placeholder="Issue text (required)" required=''></textarea>
               </div>
               <div class="form-group row">
                 <label class="col-sm-4" for="created_by"><b>Created By:</b></label>  
-                <input type="text" name="created_by" class="col-sm-8" placeholder="*Created by" required=''>
+                <input type="text" name="created_by" class="col-sm-8" placeholder="Created by (required)" required=''>
               </div>
               <div class="form-group row">
                 <label class="col-sm-4" for="assigned_to"><b>Assigned To:</b></label>  
-                <input type="text" name="assigned_to" class="col-sm-8" placeholder="(opt)Assigned to" >
+                <input type="text" name="assigned_to" class="col-sm-8" placeholder="Assigned to (optional)" >
               </div>
               <div class="form-group row">
                 <label class="col-sm-4" for="status_text"><b>Status Text:</b></label>  
-                <input type="text" name="status_text" class="col-sm-8" placeholder="(opt)Status text" >
+                <input type="text" name="status_text" class="col-sm-8" placeholder="Status text (optional)" >
               </div>
               <div class="form-group row"> 
                 <button type="submit" class="col-sm-6">Submit Issue</button>
@@ -57,27 +57,27 @@
             <form id="testForm2">
               <div class="form-group row">
                 <label class="col-sm-4" for="_id"><b>_id:</b></label>
-                <input class="col-sm-8" type="text" name="_id" placeholder="*_id" required=''>
+                <input class="col-sm-8" type="text" name="_id" placeholder="_id (required)" required=''>
               </div>
               <div class="form-group row">
                 <label class="col-sm-4" for="issue_title"><b>Issue Title:</b></label>
-                <input class="col-sm-8" type="text" name="issue_title" placeholder="(opt)Title" >
+                <input class="col-sm-8" type="text" name="issue_title" placeholder="Title (optional)" >
               </div>
               <div class="form-group row">
                 <label class="col-sm-4" for="issue_text"><b>Issue Text:</b></label>
-                <textarea class="col-sm-8" type="text" name="issue_text" placeholder="(opt)Text" ></textarea>
+                <textarea class="col-sm-8" type="text" name="issue_text" placeholder="Text (optional)" ></textarea>
               </div>
               <div class="form-group row">
                 <label class="col-sm-4" for="created_by"><b>Created By:</b></label>
-                <input class="col-sm-8" type="text" name="created_by" placeholder="(opt)Created by" >
+                <input class="col-sm-8" type="text" name="created_by" placeholder="Created by (optional)" >
               </div>
               <div class="form-group row">
                 <label class="col-sm-4" for="assigned_to"><b>Assigned To:</b></label>
-                <input class="col-sm-8" type="text" name="assigned_to" placeholder="(opt)Assigned to" >
+                <input class="col-sm-8" type="text" name="assigned_to" placeholder="Assigned to (optional)" >
               </div>
               <div class="form-group row">
                 <label class="col-sm-4" for="status_text"><b>Status Text:</b></label>
-                <input class="col-sm-8" type="text" name="status_text" placeholder="(opt)Status text" >
+                <input class="col-sm-8" type="text" name="status_text" placeholder="Status text (optional)" >
               </div>
               <div class="form-group">
                 <label for="open">
@@ -96,7 +96,7 @@
             <form id="testForm2">
               <div class="form-group row">
                 <label for="_id" class="col-sm-4"><b>_id:</b></label>
-                <input class="col-sm-8" type="text" name="_id" placeholder="_id" required=''>
+                <input class="col-sm-8" type="text" name="_id" placeholder="_id (required)" required=''>
               </div>
               <div class="form-group row">
                 <button type="submit" class="col-sm-6">Delete Issue</button>
@@ -104,7 +104,10 @@
             </form>
           </div>
           <!-- TODO: Improve JSON result output -->
-          <code id='jsonResult'></code>
+          <div class="response col-xs-10 col-sm-10 col-md-9 col-lg-7">
+            <h3>Server Response:</h3>
+            <div id='jsonResult'></div>
+          </div>
         </div>
       </section>
       <section id='userstories'>
@@ -162,7 +165,8 @@
               type: 'post',
               data: $('#testForm').serialize(),
               success: function(data) {
-                $('#jsonResult').text(JSON.stringify(data));
+                const { message, issue } = data;
+                $('#jsonResult').html(`<h5>${message}</h5>`);
               }
             });
             e.preventDefault();
@@ -173,7 +177,8 @@
               type: 'put',
               data: $('#testForm2').serialize(),
               success: function(data) {
-                $('#jsonResult').text(JSON.stringify(data));
+                const { message, issue } = data;
+                $('#jsonResult').html(`<h5>${message}</h5>`);
               }
             });
             e.preventDefault();
@@ -184,7 +189,8 @@
               type: 'delete',
               data: $('#testForm3').serialize(),
               success: function(data) {
-                $('#jsonResult').text(JSON.stringify(data));
+                const { message, issue } = data;
+                $('#jsonResult').html(`<h5>${message}</h5>`);
               }
             });
             e.preventDefault();
