--- a/public/style.css
+++ b/public/style.css
@@ -1,23 +1,67 @@
-* {
-  margin: 0px;
-  padding: 0px;
-}
-
 body {
-  padding: 10px;
-}
+  font-size: 16px; }
+  body div.container h1 {
+    font-size: 3rem;
+    font-weight: 700; }
+  body div.container code, body div.container li, body div.container p {
+    font-size: 1.1rem; }
+  body div.container code {
+    color: mediumturquoise; }
+  body div.container a {
+    color: #008385; }
+  body div.container section div.row {
+    display: flex;
+    justify-content: center; }
+  body div.container section:first-child {
+    margin-top: 4rem; }
+  body div.container section:last-child {
+    margin-bottom: 4rem; }
+  body div.container section#userstories div.examples div {
+    margin: 0.5rem; }
+  body div.container section#ui {
+    margin: 2rem 0; }
+  body div.container section#testui {
+    margin: 2rem 0; }
+    body div.container section#testui div.row > div {
+      min-width: 380px; }
+    body div.container section#testui div > h3 > i {
+      color: #008385; }
+    body div.container section#testui div > h3 {
+      text-align: center; }
+    body div.container section#testui div.response {
+      background-color: ghostwhite;
+      padding: 2rem;
+      margin: 2rem;
+      border: 1px solid lightgray; }
+      body div.container section#testui div.response h2, body div.container section#testui div.response p {
+        text-align: center; }
+      body div.container section#testui div.response h2 {
+        margin-bottom: 0.5rem; }
+      body div.container section#testui div.response p {
+        font-size: 1.2rem; }
+    body div.container section#testui form {
+      display: flex;
+      flex-direction: column; }
+      body div.container section#testui form label {
+        text-align: right;
+        padding-left: 0; }
+      body div.container section#testui form button {
+        padding: 0.4rem 1.4rem;
+        color: white;
+        font-size: 1.1rem;
+        font-weight: 600;
+        letter-spacing: 1px;
+        background-color: #8bece2;
+        border: 1px solid ghostwhite;
+        box-shadow: 0 2px 4px lightgray; }
+      body div.container section#testui form button:hover {
+        background-color: #70e8dc; }
+      body div.container section#testui form button:active {
+        box-shadow: 0 0 2px lightgray; }
+  body div.container section#footer {
+    margin-top: 3rem;
+    text-align: center; }
+    body div.container section#footer a {
+      color: #008385; }
 
-.issue {
-  margin: 20px;
-  padding: 5px;
-  width: 60%;
-  border: 2px solid black;
-}
-
-.closed {
-  background-color: lightgrey;
-}
-
-.id {
-  font-size: 10.5px;
-}
+/*# sourceMappingURL=style.css.map */
